[package]
name = "poly_it"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Christoff van Zyl <stoffel1997@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SkyeC0re/polyit-rs"
description = "A no-std library for manipulating polynomials with slice support and minimal allocation."

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
num-traits = { version = "0.2.18", default-features = false, features = [
    "libm",
] }
serde = { version = "1.0", features = ["derive"], optional = true }
tinyvec = { version = "1.6.0", optional = true }

[dev-dependencies]
paste = "1.0.14"

[features]
default = ["alloc"]
serde = ["dep:serde"]
tinyvec = ["dep:tinyvec"]
alloc = ["tinyvec?/alloc"]

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "polynomial = \"[0-9\\.]+\"", replace = "{{crate_name}} = \"{{version}}\"" },
    { file = "README.md", search = "polynomial = \\{version = \"[0-9\\.]+\"", replace = "{{crate_name}} = {version = \"{{version}}\"" },
]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]
